--- a/app/views/api/v2/accounts/reports/agents.csv.erb
+++ b/app/views/api/v2/accounts/reports/agents.csv.erb
@@ -1,4 +1,4 @@
 <%= CSVSafe.generate_line [I18n.t('reports.period', since: Date.strptime(params[:since], '%s'), until: Date.strptime(params[:until], '%s'))] %> 
 <% @report_data.each do |row| %>
-  <%= CSV.generate_line row %>
+  <%= CSVSafe.generate_line row %>
 <% end %>
